--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.btn,
-.portfolio-btn {
+.btn {
 font-family: inherit;
 font-weight: 700;
 font-size: 16px;
@@ -47,9 +46,13 @@ background-color: #2196f3;
 }
 
 .portfolio-btn {
-  color: var(--main-txt-cl);
-  background-color: #F5F4FA
-  
+font-weight: 500;
+font-size: 16px;
+line-height: calc(26 / 16);
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--main-txt-cl);
+background-color: #F5F4FA 
 }
 
 .portfolio-btn:hover,
@@ -86,8 +89,12 @@ color: #2196F3;
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.color2 {
+.color-1 {
   color: black
+}
+
+.color-2 {
+  color:white
 }
 
 
@@ -103,9 +110,6 @@ color:var(--main-txt-cl);
 
 .header-link-curent {
   color:var(--acent-txt-cl)
-}
-.header-email-current {
-  color: var(--acent-txt-cl)
 }
 
 .header-link:hover,
